--- a/destinationer.html
+++ b/destinationer.html
@@ -9,300 +9,10 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <style>
-        /*
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        article {
-            border: 1px solid rgba(0, 0, 0, 0.25);
-            padding: 10px;
-            box-shadow: 1px 0px 5px 5px grey;
-
-        }
-
-        .logo img {
-            width: 10vw;
-            height: 10vh;
-        }
-
-        #container img {
-            width: 100%;
-            max-height: 200px;
-            object-fit: cover;
-
-        }
-
-        #container {
-            width: 90vw;
-            max-width: 1000px;
-            margin: 0 auto;
-            display: grid;
-            grid-gap: 10px;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        }
-
-        header {
-            display: flex;
-            justify-content: center;
-        }
-
-        .valgt {
-            color: white;
-            background-color: lightblue;
-
-        }
-
-        h1 {
-            text-align: center;
-            font-family: 'Roboto', sans-serif;
-            color: white;
-            margin: 6rem auto;
-            margin-bottom: 2rem;
-
-        }
-
-        h2 {
-            font-family: 'Roboto', sans-serif;
-
-        }
-
-        p {
-            font-family: 'Roboto', sans-serif;
-
-        }
-
-        .pris {
-            font-style: oblique;
-            color: darkblue;
-
-        }
-
-        .filter {
-            margin: 5px;
-        }
-
-
-        #popup {
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100vw;
-            height: 100vh;
-            background-color: rgba(0, 0, 0, .8);
-            display: none;
-
-        }
-
-        #popup article {
-            width: 80vw;
-            height: 80vh;
-            margin: 6rem auto;
-            background-color: #8ECBEB;
-        }
-
-        #luk {
-            position: fixed;
-            top 0;
-            right: 8em;
-            background-color: white;
-            color: black;
-            border-radius: 5px;
-            padding: .1em;
-            cursor: pointer;
-        }
-
-        .oprindelse {
-            font-style: oblique;
-            color: darkblue;
-        }
-
-        .filtre {
-            width: 100vw;
-            max-width: 1000px;
-            margin: 3rem auto;
-            margin-top: 1rem;
-            display: grid;
-            grid-gap: 10px;
-            grid-template-columns: repeat(auto-fill, minmax(175px, 10fr));
-
-
-        }
-
-        #popup img {
-            max-width: 50%;
-            max-height: 50%;
-        }
-
-        body {
-            background-color: #57c8ef;
-            /*            z-index: 0;*/
-        }
-
-        /*  NAVIGATION CSS  */
-        /* NAVIGATION*/
-        /*
-        nav {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            min-height: 20px;
-            background-color: #1b709f;
-            font-family: 'Roboto', sans-serif;
-
-            position: fixed;
-            top: 0;
-            width: 100%;
-
-            z-index: 2;
-        }
-
-        .logo {
-            color: #c7c7c7;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            font-size: 20px;
-        }
-
-        .nav-links {
-            display: flex;
-            justify-content: space-around;
-            width: 30%;
-        }
-
-        .nav-links li {
-            list-style: none;
-        }
-
-        .nav-links li {
-            border-right: 2px solid #c7c7c7;
-        }
-
-        .nav-links li:last-child {
-            border-right: none;
-        }
-
-        .nav-links a {
-            color: #c7c7c7;
-            text-decoration: none;
-            font-weight: lighter;
-            padding-right: 2em;
-        }
-
-        /* BURGER MENU */
-        /*
-        .burger {
-            display: none;
-        }
-
-        .burger div {
-            width: 25px;
-            height: 3px;
-            background-color: #c7c7c7;
-            margin: 5px;
-
-            transition: all 0.3s ease;
-        }
-
-
-
-
-        @media screen and (max-width: 768px) {
-            body {
-                overflow-x: hidden;
-            }
-
-            .nav-links {
-                position: absolute;
-                right: 0px;
-                height: 92vh;
-                top: 8vh;
-                background-color: #1b709f;
-
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                width: 50%;
-
-                transform: translateX(100%);
-                transition: transform 0.5s ease-in;
-            }
-
-            .nav-links li {
-                border: none;
-                opacity: 0;
-            }
-
-            .burger {
-                display: block;
-                cursor: pointer;
-            }
-        }
-
-        .nav-active {
-            transform: translateX(0);
-        }
-
-        .toggle .line1 {
-            transform: rotate(-45deg) translate(-5px, 6px);
-        }
-
-        .toggle .line2 {
-            opacity: 0;
-        }
-
-        .toggle .line3 {
-            transform: rotate(45deg) translate(-5px, -6px);
-        }
-
-        /* Animationer */
-        /*
-        @keyframes navLinkFade {
-            from {
-                opacity: 0;
-                transform: translateX(50px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateX(0px);
-            }
-        }
-
-        @media screen and (max-width: 1330px) {
-            .nav-links {
-                width: 38%;
-            }
-
-            body {
-                overflow-x: hidden;
-            }
-        }
-
-        @media screen and (max-width: 1050px) {
-            .nav-links {
-                width: 50%;
-            }
-
-            body {
-                overflow-x: hidden;
-            }
-        }
-
-        .logo h1 {
-            font-family: 'Roboto Mono', monospace;
-        }
-        */
-
-    </style>
-
 </head>
 
 <body class="destination-body">
-    <!--    <script src="script.js"></script>-->
+
 
     <!--  NAVIGATION  -->
     <header>
@@ -372,79 +82,8 @@
             </article>
         </template>
     </section>
-    <script>
-        let filter = "alle";
-        let destinationer;
-        let container = document.querySelector("#container");
-        let temp = document.querySelector("template");
 
-        const link = "https://spreadsheets.google.com/feeds/list/1KumHIMr-aP9Ey9WOiRaoOIaJnTZE0NDR1AoZhw2W5W8/od6/public/values?alt=json"
-
-        document.addEventListener("DOMContentLoaded", hentData);
-
-
-        async function hentData() {
-            const respons = await fetch(link);
-            destinationer = await respons.json();
-            addEventListenersToButtons();
-            vis(destinationer);
-        }
-
-        function vis(destinationer) {
-            //løb igennem array "destinationer"
-            container.innerHTML = "";
-            destinationer.feed.entry.forEach(dest => {
-                if (filter == "alle" || filter == dest.gsx$kategori.$t.toLowerCase()) {
-                    console.log(dest);
-                    const klon = temp.cloneNode(true).content;
-                    klon.querySelector(".navn").textContent = dest.gsx$navn.$t;
-                    klon.querySelector("img").src = "billeder/" + dest.gsx$billede.$t + ".jpg";
-                    klon.querySelector(".kort").textContent = dest.gsx$kort.$t;
-                    klon.querySelector(".pris").textContent = "Pris: " + dest.gsx$pris.$t + ",-";
-
-                    klon.querySelector("article").addEventListener("click", () => visDetaljer(dest));
-
-                    container.appendChild(klon);
-
-                }
-
-            })
-
-        }
-
-        function visDetaljer(dest) {
-            popup.style.display = "block";
-            popup.querySelector(".navn").textContent = dest.gsx$navn.$t;
-            popup.querySelector(".beskrivelse").textContent = dest.gsx$lang.$t;
-            popup.querySelector("img").src = "billeder/" + dest.gsx$billede.$t + ".jpg";
-
-        }
-
-        document.querySelector("#luk").addEventListener("click", () => popup.style.display = "none");
-
-
-        function addEventListenersToButtons() {
-            document.querySelectorAll(".filter").forEach((btn) => {
-                btn.addEventListener("click", filterBTNs);
-            });
-        };
-
-        function filterBTNs() {
-            filter = this.dataset.køn;
-            document.querySelector("h1").textContent = this.textContent;
-            document.querySelectorAll(".filter").forEach((btn) => {
-
-
-                btn.classList.remove("valgt");
-
-            });
-
-            this.classList.add("valgt");
-            vis(destinationer);
-        }
-
-    </script>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
