--- a/destinationer.html
+++ b/destinationer.html
@@ -77,7 +77,9 @@
                 <h2></h2>
                 <img src="" alt="">
                 <h2 class="navn"></h2>
-                <p class="kort"></p>
+                <p class="indbyggere"></p>
+                <p class="vejr"></p>
+                <p class="funfact"></p>
                 <p class="pris"></p>
             </article>
         </template>
