--- a/destinationer.html
+++ b/destinationer.html
@@ -49,11 +49,7 @@
             <button class="filter" data-køn="europa">Europa</button>
             <button class="filter" data-køn="nordamerika">Nordamerika</button>
             <button class="filter" data-køn="asien">Asien</button>
-            <button class="filter" data-køn="sydamerika">Sydamerika</button>
             <button class="filter" data-køn="afrika">Afrika</button>
-            <button class="filter" data-køn="storbyferie">Storbyferie</button>
-            <button class="filter" data-køn="solferie">Solferie</button>
-            <button class="filter" data-køn="skiferie">Skiferie</button>
         </div>
 
         <section id="popup">
@@ -77,10 +73,12 @@
                 <h2></h2>
                 <img src="" alt="">
                 <h2 class="navn"></h2>
-                <p class="indbyggertal"><strong>Indbyggertal: </strong></p>
-                <p class="vejr">Vejr: </p>
-                <p class="funfact">Fun fact: </p>
-                <p class="pris">Prisleje: </p>
+                <div class="kort-info">
+                    <p class="indbyggertal">Indbyggertal: </p>
+                    <p class="vejr">Vejr: </p>
+                    <p class="funfact">Fun fact: </p>
+                    <p class="pris">Prisleje: </p>
+                </div>
             </article>
         </template>
     </section>
