--- a/destinationer.html
+++ b/destinationer.html
@@ -46,6 +46,7 @@
     <section class="whole">
         <h1 class="destination-titel">ALLE</h1>
         <div class="filtre">
+            <button class="filter" data-køn="alle">Alle</button>
             <button class="filter" data-køn="europa">Europa</button>
             <button class="filter" data-køn="nordamerika">Nordamerika</button>
             <button class="filter" data-køn="asien">Asien</button>
