--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ font-family: 'Roboto Mono', monospace;
         <div class="sectionwrapper">
             <div class="column">
                 <h1>FAQ</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur iure totam officiis possimus illum nihil accusantium, non, natus saepe modi facere nulla, blanditiis alias quo necessitatibus incidunt nobis. Repellendus esse eos, aliquid fugit tenetur consequatur eligendi placeat quae facere ad voluptate voluptatum, earum, cum obcaecati reiciendis deleniti! Numquam non nesciunt dolorem nam cupiditate, incidunt sit asperiores? Provident unde quibusdam perspiciatis debitis sunt repellat consequatur fugiat est, saepe neque tenetur, incidunt harum alias aut facilis. Facere, cupiditate veritatis quo doloribus vel quas rem sit quibusdam voluptatem, placeat cumque nostrum, ullam obcaecati commodi. Praesentium nesciunt quisquam eligendi fuga incidunt provident excepturi ad libero impedit dignissimos animi obcaecati illo ipsa ullam aliquid, hic inventore voluptates voluptatum, quo aperiam. Perferendis excepturi amet porro dignissimos esse veniam ratione dolor velit voluptatibus ad a quidem similique odit inventore et, obcaecati, facere quam nostrum cum, omnis mollitia. Earum, cum, modi? Dolore ex voluptatem tempore dolorem eveniet laborum.</p>
+                <p>Denne side er en form for rejseguide hvor vi kommer med anbefalinger af forskellige rejsedestinationer. Grunden til du kan stole på vores anbefalinger er fordi vi selv har taget derud og oplevet rejsedestinationen helt tæt på.</p>
             </div>
         </div>
     </section>
