--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ font-family: 'Roboto Mono', monospace;
         <div class="sectionwrapper">
             <div class="column">
                 <h1>FAQ</h1>
-                <p>Denne side er en form for rejseguide hvor vi kommer med anbefalinger af forskellige rejsedestinationer. Grunden til du kan stole på vores anbefalinger er fordi vi selv har taget derud og oplevet rejsedestinationen helt tæt på.</p>
+                <p>Denne side er en form for rejseguide hvor vi kommer med anbefalinger af forskellige rejsedestinationer. Grunden til du kan stole på vores anbefalinger er fordi vi selv har taget derud og oplevet rejsedestinationen helt tæt på.
+                    <br>
+                    Vi brænder for at rejse og har passion for det, vi har erfaringer og tænker med den erfaring at kunne formidle den videre til andre mennesker som har lysten for at rejse.</p>
             </div>
         </div>
     </section>
