--- a/destinationer.html
+++ b/destinationer.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@600;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -73,7 +74,7 @@
 
         <template class="destination-template">
             <article id="grid-article">
-                <h2></h2>
+                <h2 class="titel"></h2>
                 <img src="" alt="">
                 <h2 class="navn"></h2>
                 <div class="kort-info">
