--- a/singleview.html
+++ b/singleview.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section id="popup">
         <article>
             <div id="luk">X</div>
-            <h2></h2>
-            <img src="" alt="">
             <section>
+                <h2></h2>
                 <p><span class="beskrivelse"></span></p>
-                <p><span class="pris"></span></p>
-                <img src="" alt="">
             </section>
+            <section>
+                <img src="" alt="">
+                <div class="kort-info">
+                    <ul>
+                        <li>
+                            <p class="indbyggertal">Indbyggertal: </p>
+                        </li>
+                        <li>
+                            <p class="vejr">Vejr: </p>
+                        </li>
+                        <li>
+                            <p class="funfact">Fun fact: </p>
+                        </li>
+                        <li>
+                            <p class="pris">Prisleje: </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
         </article>
     </section>
 
@@ -44,9 +62,13 @@
                     console.log(dest);
                     document.querySelector("h2").textContent = dest.gsx$navn.$t;
                     document.querySelector("img").src = "billeder/" + dest.gsx$billede.$t + ".jpg";
-                    document.querySelector(".beskrivelse").textContent += dest.gsx$lang.$t;
-                    document.querySelector(".pris").textContent += dest.gsx$pris.$t;
+                    document.querySelector(".beskrivelse").innerHTML += dest.gsx$lang.$t;
 
+
+                    document.querySelector(".indbyggertal").textContent += dest.gsx$indbyggertal.$t;
+                    document.querySelector(".vejr").textContent += dest.gsx$vejr.$t;
+                    document.querySelector(".funfact").textContent += dest.gsx$funfact.$t;
+                    document.querySelector(".pris").textContent += dest.gsx$pris.$t;
                 }
 
             })
