--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@ font-family: 'Roboto Mono', monospace;
         <h1>Trending</h1>
         <div class="sectionwrapper">
             <div class="column1">
-                <img class="img1" src="billeder/billede1.jpg" alt="">
+                <img class="img1" src="img/billeder/billede1.jpg" alt="">
                 <a href="destinationer.html">Dubai</a>
             </div>
             <div class="column1">
-                <img class="img2" src="billeder/billede2.jpg" alt="">
-                <a href="destinationer.html">Skagen</a>
+                <img class="img2" src="img/billeder/billede8.jpg" alt="">
+                <a href="destinationer.html">Hawaii</a>
             </div>
             <div class="column1">
-                <img class="img3" src="billeder/billede6.jpg" alt="">
+                <img class="img3" src="img/billeder/billede9.jpg" alt="">
                 <a href="destinationer.html">Østrig</a>
             </div>
         </div>
