--- a/singleview.html
+++ b/singleview.html
@@ -61,7 +61,7 @@
                 if (id == dest.gsx$id.$t.toLowerCase()) {
                     console.log(dest);
                     document.querySelector("h2").textContent = dest.gsx$navn.$t;
-                    document.querySelector("img").src = "billeder/" + dest.gsx$billede.$t + ".jpg";
+                    document.querySelector("img").src = "img/billeder/" + dest.gsx$billede.$t + ".jpg";
                     document.querySelector(".beskrivelse").innerHTML += dest.gsx$lang.$t;
 
 
