--- a/omos2.html
+++ b/omos2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
+
 
     <!--  NAVIGATION  -->
     <header>
@@ -58,7 +58,7 @@
             <div class="column2">
                 <img src="billeder/profil/jean.jpg" alt="">
                 <h2>Jean</h2>
-                <p>Jeg elsker at tage ud og rejse! Jeg har selv rejst i over 40 lande, og jeg kommer med egne erfaringer og anbefalinger så du kan komme ud og rejse en tur som kan opleves på egen hånd, som bliver helt uforglemmelig. Jeg ved at rejsen er bedst, når man får lov til at komme tæt på de lande, områder og kulturer, som man forblindes af. Det er mig der fører dig videre til dér hvor vejene bliver til stier, og betongen bliver til skov; at din rejse er uforglemmelig. God rejse!<br><br>
+                <p>Jeg elsker at tage ud og rejse! Jeg har selv rejst i over 40 lande, og jeg kommer med egne erfaringer og anbefalinger så du kan komme ud og rejse en tur som kan opleves på egen hånd, som bliver helt uforglemmelig. Jeg ved at rejsen er bedst, når man får lov til at komme tæt på de lande, områder og kulturer, som man forblindes af. Det er mig der fører dig videre til dér hvor vejene bliver til stier, og betongen bliver til skov, at din rejse er uforglemmelig. God rejse!<br><br>
                 </p>
 
                 <h3>Næste rejsemål: Seoul, Sydkorea</h3>
@@ -75,11 +75,10 @@
         </div>
 
     </section>
-
-
     <footer>
         <p class="footer-p">JEF-Company A/S</p>
     </footer>
+    <script src="script.js"></script>
+</body>
 
-
-</body></html>
+</html>
