--- a/omos2.html
+++ b/omos2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JEF-RejseGuides</title>
+    <title>Om Os</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@600;700&display=swap" rel="stylesheet">
 </head>
