splashbillede sat ind

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ font-family: 'Roboto Mono', monospace;
 
 
     <!-- SPLASH -->
-    <section id="splash"></section>
+    <section id="splash">
+        <h1>Rejs med passion</h1>
+    </section>
 
     <!-- FAQ -->
     <section id="faq">
@@ -86,6 +88,4 @@ font-family: 'Roboto Mono', monospace;
         <p class="footer-p">JEF-Company A/S</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
