--- a/destinationer.html
+++ b/destinationer.html
@@ -69,7 +69,10 @@
         </template>
     </section>
 
+
     <script src="script.js"></script>
 </body>
 
-</html>
+<footer>
+    <p class="footer-p">JEF-Company A/S</p>
+</footer></html>
