--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ font-family: 'Roboto Mono', monospace;
     <!-- SPLASH -->
     <section id="splash">
         <h1>Rejs med passion</h1>
+        <i class="arrow down"></i>
     </section>
 
     <!-- FAQ -->
@@ -93,4 +94,6 @@ font-family: 'Roboto Mono', monospace;
         <p class="footer-p">JEF-Company A/S</p>
     </footer>
 
-</body></html>
+</body>
+
+</html>
