--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@ font-family: 'Roboto Mono', monospace;
         <div class="sectionwrapper">
             <div class="column1">
                 <img class="img1" src="img/billeder/billede1.jpg" alt="">
-                <a href="destinationer.html">Dubai</a>
+                <a href="singleview.html?id=1">Dubai</a>
             </div>
             <div class="column1">
                 <img class="img2" src="img/billeder/billede8.jpg" alt="">
-                <a href="destinationer.html">Hawaii</a>
+                <a href="singleview.html?id=7">Hawaii</a>
             </div>
             <div class="column1">
                 <img class="img3" src="img/billeder/billede9.jpg" alt="">
-                <a href="destinationer.html">Østrig</a>
+                <a href="singleview.html?id=8">Cinque terre</a>
             </div>
         </div>
     </section>
