--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ font-family: 'Roboto Mono', monospace;
             </div>
             <div class="column1">
                 <img class="img2" src="img/billeder/billede8.jpg" alt="">
-                <a href="singleview.html?id=7">Hawaii</a>
+                <a href="singleview.html?id=10">Bali</a>
             </div>
             <div class="column1">
                 <img class="img3" src="img/billeder/billede9.jpg" alt="">
