--- a/singleview.html
+++ b/singleview.html
@@ -19,7 +19,7 @@
             </section>
             <section>
                 <img src="" alt="">
-                <div class="kort-info">
+                <div class="kort-info2">
                     <ul>
                         <li>
                             <p class="indbyggertal">Indbyggertal: </p>
